# Enclave---Council-AI-Agents

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Improvement.MD  MAINTENANCE.md  README.md
src/: main.rs
src/agents/: base.rs  roles.rs
src/api/: config_routes.rs  mod.rs  rate_limit.rs  routes.rs  sessions_mod.rs
src/core/: approval.rs  events.rs  ipc.rs  memory.rs  mod.rs  orchestrator_mod.rs  permission_mod.rs  providers_mod.rs  skills.rs  worktree_mod.rs
src/core/tools/: apply_patch.rs  ask_question.rs  copy_path.rs  create_directory.rs  delete_path.rs  edit_file.rs  find_path.rs  get_context.rs  glob.rs  invoke_skill.rs  mcp_client.rs  mod.rs  move_path.rs  parser.rs  path_exists.rs  read_directory.rs  rename_path.rs  replace_match.rs  spawn_subagent.rs
src/ui/: index.html  script.js
src/utils/: config_manager.rs  config_mod.rs  logger_mod.rs  mod.rs
