[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# API & JSON
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI & Config
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
envy = "0.4"

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
regex = "1.10"
once_cell = "1.19"
